<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryHall.LoginActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_email"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="200dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_password"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="275dp"
        android:layout_toEndOf="@id/log_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="13dp"
        android:text="@string/login"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/log_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="67dp"
        android:text="@string/log_in_to_existing_account"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <include layout = "@layout/toolbar_layout" android:id="@+id/log_tool_bar"/>

</RelativeLayout>